# MDL

./: .gitignore  AGENTS.md  AGG_DIRECT_RESULTS.md  DATA_FORMAT.md  MODEL_ARCHITECTURE.md  PAPER_ALIGNMENT.md  README.md  data.md  guide.md  mdl.py  note.md  pyproject.toml  requirements.txt  sample_row_mock_json  temp
configs/: default.yaml  longer_5000_perf.yaml  longer_paper.yaml  longer_perf.yaml  mdl.yaml  mdl_onetrans.yaml  mdl_onetrans_a100_8x80g.yaml  mdl_perf.yaml  mdl_rankmixer.yaml  mdl_rankmixer_2xh100_rowwise.yaml  mdl_rankmixer_a100_8x80g.yaml  mdl_rankmixer_paper.yaml  onetrans.yaml  onetrans_a100_8x80g.yaml  onetrans_paper.yaml  onetrans_perf.yaml  rankmixer.yaml  rankmixer_a100_8x80g.yaml  rankmixer_paper.yaml  rankmixer_perf.yaml
docs/: adapter_agent_playbook.md  adapter_development.md  adapter_feature_engineering_checklist.md  adapter_guide.md  feature_engineering_checklist.md  feature_pipeline_agent_playbook.md  feature_pipeline_data_layout_migration.md  feature_pipeline_data_layout_migration_prompt.md  feature_pipeline_development.md  model_architecture.md
examples/: __init__.py  parquet_identity_adapter.py
mdl/: __init__.py  ranking.py  tabular_model.py  train.py  train_smoke.py  train_tabular.py
notebooks/: data_analysis.ipynb
scripts/: _bootstrap.py  build_mdl_rankmixer_config.py  evaluate.py  generate_mock_parquet.py  generate_synthetic_agg_parquet.py  predict.py  preprocess.py  profile_cpu_datapath.py  profile_gpu_utilization_factors.py  profile_prehashed_parquet.py  recommend_categorical_encodings.py  research_adapter_stage_costs.py  (+5 more)
(+134 files in other folders)
