[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mdl-paper-alignment"
version = "0.1.0"
description = "Paper-aligned RankMixer, MDL, OneTrans, and LONGER implementations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.2",
  "PyYAML>=6.0",
  "pyarrow>=14.0",
]

[tool.setuptools.packages.find]
include = ["src*"]
